2010-08-10 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSTextStorage.m: Follow Richard's changes to
	GSAttributedString in base.

2010-08-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSApplication.m (-arrangeInFront:): Only order
	non-miniaturized windows front.

2010-08-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-draggingEntered:, -draggingUpdated): Fix
	an incorrect range check which prevented the user from copying or
	moving the current selection immediately before itself with a DnD
	operation.

2010-08-03  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSColorPanel.m:
	* Source/NSFontPanel.m:
	Make the NSColorPanel and NSFontPanel use NSUtilityWindowMask.
	Also remove the NSMiniaturizableWindowMask from NSFontPanel.
	This makes the panels behave as they do on Mac OS.
	Feel free to revert/discuss if you disagree with this.. :-)

2010-08-03  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/NSPanel.m: Override 
	-initWithContentRect:styleMask:backing:defer: so that if
	NSUtilityWindowMask is part of the style mask, we can
	set the panel to be a floating panel (which is the definition
	of NSUtilityWindowMask, in addition to making the panel
	have a thin title bar.)

2010-08-03 Riccardo Mottola

	* Source/NSScrollView.m :
	added documentation for scroller hiding.

2010-08-03 17:21-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/GSTheme.m: remove forward declaration for _setArchiveByName
	from NSImage category.
	* Source/NSImage.m: Added code in _setImage:forName: to archive
	by name instead.

2010-08-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView.m (-validateUserInterfaceItem:,
	-performFindPanelAction:): Implement find panel support.

	* Source/GNUmakefile:
	* Source/GSTextFinder.h:
	* Source/GSTextFinder.m:
	* Panels/GNUmakefile:
	* Panels/English.lproj/GSFindPanel.gorm:
	New text finder and associated find panel.

	* Source/NSTextView.m(currentVersion, -initWithTextView:,